@startuml

title __SECURITY's Class Diagram__\n

  package  {
    package com.adminportal {
      package com.adminportal.domain {
        package com.adminportal.domain.security {
          class Authority {
              - authority : String
              + Authority()
              + getAuthority()
          }
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.domain {
        package com.adminportal.domain.security {
          class PasswordResetToken {
              {static} - EXPIRATION : int
              - id : Long
              - token : String
              - expiryDate : Date
              + PasswordResetToken()
              + PasswordResetToken()
              {static} + getExpiration()
              + updateToken()
              + getId()
              - calculateExpiryDate()
              + setId()
              + getToken()
              + setToken()
              + getUser()
              + setUser()
              + getExpiryDate()
              + setExpiryDate()
              + toString()
          }
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.domain {
        package com.adminportal.domain.security {
          class Role {
              - roleId : int
              - name : String
              - userRoles : Set<UserRole>
              + getRoleId()
              + setRoleId()
              + getName()
              + setName()
              + getUserRoles()
              + setUserRoles()
          }
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.domain {
        package com.adminportal.domain.security {
          class UserRole {
              - userRoleId : Long
              + UserRole()
              + UserRole()
              + getUserRoleId()
              + setUserRoleId()
              + getUser()
              + setUser()
              + getRole()
              + setRole()
          }
        }
      }
    }
  }
  

  Authority -up-|> GrantedAuthority
  PasswordResetToken o-- User : user
  UserRole o-- User : user
  UserRole o-- Role : role


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
